[package]
name = "helix-term"
description = "A post-modern text editor."
include = ["src/**/*", "README.md"]
default-run = "hx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.deb]
# generate a .deb in target/debian/ with the command: cargo deb --no-build
name = "helix"
assets = [
  { source = "target/release/hx", dest = "/usr/lib/helix/", mode = "755" },
  { source = "../contrib/hx_launcher.sh", dest = "/usr/bin/hx", mode = "755" },
  { source = "../runtime/*", dest = "/usr/lib/helix/runtime/", mode = "644" },
  { source = "../runtime/grammars/*", dest = "/usr/lib/helix/runtime/grammars/", mode = "644" }, # to avoid sources/
  { source = "../runtime/queries/**/*", dest = "/usr/lib/helix/runtime/queries/", mode = "644" },
  { source = "../runtime/themes/**/*", dest = "/usr/lib/helix/runtime/themes/", mode = "644" },
  { source = "../README.md", dest = "/usr/share/doc/helix/", mode = "644" },
  { source = "../contrib/completion/hx.bash", dest = "/usr/share/bash-completion/completions/hx", mode = "644" },
  { source = "../contrib/completion/hx.fish", dest = "/usr/share/fish/vendor_completions.d/hx.fish", mode = "644" },
  { source = "../contrib/completion/hx.zsh", dest = "/usr/share/zsh/vendor-completions/_hx", mode = "644" },
  { source = "../contrib/Helix.desktop", dest = "/usr/share/applications/Helix.desktop", mode = "644" },
  { source = "../contrib/helix.png", dest = "/usr/share/icons/hicolor/256x256/apps/helix.png", mode = "644" },
]

[features]
default = ["git"]
unicode-lines = ["helix-core/unicode-lines", "helix-view/unicode-lines"]
integration = ["helix-event/integration_test"]
git = ["helix-vcs/git"]

[[bin]]
name = "hx"
path = "src/main.rs"

[dependencies]
helix-stdx = { workspace = true } #unified
helix-core = { workspace = true } #unified
helix-event = { workspace = true } #unified
helix-view = { workspace = true } #unified
helix-lsp = { workspace = true } #unified
helix-dap = { workspace = true } #unified
helix-vcs = { workspace = true } #unified
helix-loader = { workspace = true } #unified
anyhow = { workspace = true } #unified
once_cell = { workspace = true } #unified
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "net", "process", "sync"] } #unified
tui = { path = "../helix-tui", package = "helix-tui", default-features = false, features = ["termina", "crossterm"] }
termina = { workspace = true, features = ["event-stream"] }
signal-hook = "0.4"
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap = { version = "1.8.1" }
termini = { workspace = true } #unified
indexmap = "2.13"
fern = { workspace = true } #unified
chrono = { workspace = true } #unified
log = { workspace = true } #unified

# File picker
nucleo.workspace = true
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
# markdown doc rendering
pulldown-cmark = { version = "0.13", default-features = false }
# file type detection
content_inspector = "0.2.4"
thiserror.workspace = true

# opening URLs
open = "5.3.3"
url = { workspace = true, features = ["serde"] } #unified

# config
toml.workspace = true
serde_json = { workspace = true } #unified
serde = { workspace = true } #unified

dashmap = "6.0"

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true, features = ["event-stream"] } #unified

[target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
libc = { workspace = true } #unified

[build-dependencies]
helix-loader = { workspace = true } #unified

[dev-dependencies]
smallvec = { workspace = true } #unified
indoc = { workspace = true } #unified
tempfile.workspace = true
same-file = "1.0.1"
