[package]
name = "helix-tui"
description = """A library to build rich terminal user interfaces or dashboards"""
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["termina", "crossterm"]

[dependencies]
helix-view = { workspace = true, features = ["term"] } #unified
helix-core = { workspace = true } #unified

bitflags.workspace = true
cassowary = "0.3"
unicode-segmentation.workspace = true
termina = { workspace = true, optional = true }
termini = { workspace = true } #unified
once_cell = { workspace = true } #unified
log = { workspace = true } #unified

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true, optional = true } #unified
