[package]
name = "helix-tui"
description = """A library to build rich terminal user interfaces or dashboards"""
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["termina", "crossterm"]

[dependencies]
helix-view = { path = "../helix-view", features = ["term"] }
helix-core = { path = "../helix-core" }

bitflags.workspace = true
cassowary = "0.3"
unicode-segmentation.workspace = true
termina = { workspace = true, optional = true }
termini = "1.0"
once_cell = "1.21"
log = "~0.4"

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.28", optional = true }

# Temporary patch until https://github.com/crossterm-rs/crossterm/pull/1030 is merged, fixes #9242
[patch.crates-io]
crossterm = { git = "https://github.com/eitsupi/crossterm", branch = "feature/windows-vt-input" }
