[package]
name = "helix-vcs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-core = { path = "../helix-core" }
helix-event = { path = "../helix-event" }
helix-stdx = { path = "../helix-stdx" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros"] }
parking_lot.workspace = true
arc-swap = { version = "1.7.1" }

gix = { version = "0.75.0", features = ["attributes", "status"], default-features = false, optional = true }
imara-diff =  "0.2.0"
anyhow = "1"

log = "0.4"

[features]
git = ["gix"]

[dev-dependencies]
tempfile.workspace = true
