[package]
name = "helix-vcs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-core = { workspace = true } #unified
helix-event = { workspace = true } #unified
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "net", "process", "sync"] } #unified
parking_lot.workspace = true
arc-swap = { version = "1.8.1" }

gix = { version = "0.79.0", features = ["attributes", "status", "max-performance"], default-features = false, optional = true }
imara-diff =  "0.2.0"
anyhow = { workspace = true } #unified
log = { workspace = true } #unified

[features]
git = ["gix"]

[dev-dependencies]
tempfile.workspace = true
