[package]
name = "helix-view"
description = "UI abstractions for use in backends"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
term = ["termina", "crossterm"]
unicode-lines = []

[dependencies]
helix-stdx = { workspace = true } #unified
helix-core = { workspace = true } #unified
helix-event = { workspace = true } #unified
helix-loader = { workspace = true } #unified
helix-lsp = { workspace = true } #unified
helix-dap = { workspace = true } #unified
helix-vcs = { workspace = true } #unified

bitflags.workspace = true
anyhow = { workspace = true } #unified
termina = { workspace = true, optional = true }

tempfile.workspace = true
once_cell = { workspace = true } #unified
url = { workspace = true, features = ["serde"] } #unified

arc-swap = { version = "1.8.1" }
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "net", "process", "sync"] } #unified
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }

slotmap.workspace = true

chardetng = "0.1"
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
toml.workspace = true
log = { workspace = true } #unified

parking_lot.workspace = true
thiserror.workspace = true

kstring = "2.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4", features = ["std"] }
crossterm = { workspace = true, optional = true } #unified

[target.'cfg(unix)'.dependencies]
libc = { workspace = true } #unified
rustix = { workspace = true, features = ["fs"] } #unified

[dev-dependencies]
helix-tui = { workspace = true } #unified
