[package]
name = "silicon-view"
description = "UI abstractions for use in backends"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
term = ["termina", "crossterm"]
unicode-lines = []

[dependencies]
silicon-stdx = { path = "../silicon-stdx" }
silicon-core = { path = "../silicon-core" }
silicon-event = { path = "../silicon-event" }
silicon-loader = { path = "../silicon-loader" }
silicon-lsp = { path = "../silicon-lsp" }
silicon-dap = { path = "../silicon-dap" }
silicon-vcs = { path = "../silicon-vcs" }

bitflags.workspace = true
anyhow = "1"
termina = { workspace = true, optional = true }

tempfile.workspace = true

# Conversion traits
once_cell = "1.21"
url = "2.5.4"

arc-swap = { version = "1.8.1" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }

slotmap.workspace = true

chardetng = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml.workspace = true
log = "~0.4"

parking_lot.workspace = true
thiserror.workspace = true

kstring = "2.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4", features = ["std"] }
crossterm = { version = "0.28", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
silicon-tui = { path = "../silicon-tui" }
