[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silicon-term = { path = "../silicon-term" }
silicon-core = { path = "../silicon-core" }
silicon-view = { path = "../silicon-view" }
silicon-loader = { path = "../silicon-loader" }
toml.workspace = true
