[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-term = { workspace = true } #unified
helix-core = { workspace = true } #unified
helix-view = { workspace = true } #unified
helix-loader = { workspace = true } #unified
toml.workspace = true
